# preco-perto

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  FRAMEWORK.md  README.md  SESSION_STATUS.md  index.html  notion-preview.html  package-lock.json  railway.json  sw.js
.github/workflows/: ci.yml  deploy.yml
.specify/memory/: constitution.md
assets/: index-BIgtAXjI.js  index-BjoaHi-0.css  index-C6jxJy7j.js  index-CXOtxLOP.css  index-ChvsKbI4.js  index-DqQ5X_D7.js
backend/: .env  .env.example  .env.production.example  .gitignore  Dockerfile  SERVICES_SUMMARY.md  alembic.ini  preco_perto.db  precoperto.db  railway.json  requirements.txt  seed_data.py  verify_db.py
backend/app/: __init__.py  main.py  precoperto.db
backend/scripts/: migrate_supabase.py  seed_db.py  seed_supabase.py
backend/tests/: conftest.py  test_auth.py  test_prices.py
docs/: CONSTITUTION.md  PLAN.md  PROJECT.md  SPEC_DRIVEN_DEVELOPMENT.md  TASKS.md
frontend/: .env  .env.production.example  .oxlintrc.json  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/assets/: index-16aWl8SK.js  index-9di-8xIO.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.css  App.tsx  index.css
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: init_db.py  seed_data.py  seed_db.py  setup_sqlite.py  setup_supabase.py
server/: README.md  pyproject.toml
spec/: FUNCTIONAL_SPEC.md
web/: README.md  package.json
(+66 files in other folders)
